# projeto

./: LICENSE  Protótipo_EstimulaAI.ipynb  README.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt  my_application.cc
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
python_api/: README.md  app.py  pyproject.toml
